// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files 1`] = `
[
  "endpoints.ts",
  "index.ts",
  "message-dto.form-group-fac.ts",
  "message-dto.form.ts",
  "message-dto.model.ts",
  "message-dto.properties.ts",
  "message-dto.test-obj-fac.ts",
  "recipient.form-group-fac.ts",
  "recipient.form.ts",
  "recipient.model.ts",
  "recipient.properties.ts",
  "recipient.test-obj-fac.ts",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum Endpoints {
  sms = '/api/v1/Sms.{format}',
}
export interface IEndpoints {
  readonly sms: string;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: index.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #index.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export * from './message-dto.form-group-fac';
export * from './message-dto.form';
export * from './message-dto.model';
export * from './message-dto.properties';
export * from './message-dto.test-obj-fac';
export * from './recipient.form-group-fac';
export * from './recipient.form';
export * from './recipient.model';
export * from './recipient.properties';
export * from './recipient.test-obj-fac';
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: message-dto.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IRecipientForm } from './recipient.form';

export interface IMessageDtoForm {
    id: FormControl<string | null | undefined>;
    body: FormControl<string>;
    recipients: FormArray<FormGroup<IRecipientForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: message-dto.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IMessageDtoForm } from './message-dto.form';
import { IRecipientForm } from './recipient.form';

export function MessageDtoFormGroupFac(): FormGroup<IMessageDtoForm> {
  return new FormGroup<IMessageDtoForm>({

    id: new FormControl<string | null | undefined>(undefined),
    // @ts-expect-error this is intentional, we want the initial value to be undefined so that the required validator will work correctly.
    body: new FormControl<string>(undefined, { validators: Validators.required, nonNullable: true } ),
    recipients: new FormArray<FormGroup<IRecipientForm>>([], { validators: Validators.required } ),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: message-dto.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IRecipient } from './recipient.model';

/* eslint-disable-next-line @typescript-eslint/no-empty-interface */
export interface IMessageDto {
  id?: string | null;
  body?: string;
  recipients?: Partial<IRecipient[]>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: message-dto.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum MessageDtoProperties {
  ID = 'id',
  BODY = 'body',
  RECIPIENTS = 'recipients',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: message-dto.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { MessageDtoProperties } from './message-dto.properties';

export function createTestMessageDto() {
    return { 
      [MessageDtoProperties.ID]: 'ID',
      [MessageDtoProperties.BODY]: 'BODY',
      [MessageDtoProperties.RECIPIENTS]: [],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: recipient.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR

export interface IRecipientForm {
    id: FormControl<string | null | undefined>;
    ultiId: FormControl<string>;
    firstName: FormControl<string>;
    middleName: FormControl<string | null | undefined>;
    lastName: FormControl<string>;
    cellPhone1: FormControl<string | null | undefined>;
    homePhone1: FormControl<string | null | undefined>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: recipient.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IRecipientForm } from './recipient.form';

export function RecipientFormGroupFac(): FormGroup<IRecipientForm> {
  return new FormGroup<IRecipientForm>({

    id: new FormControl<string | null | undefined>(undefined),
    // @ts-expect-error this is intentional, we want the initial value to be undefined so that the required validator will work correctly.
    ultiId: new FormControl<string>(undefined, { validators: Validators.required, nonNullable: true } ),
    // @ts-expect-error this is intentional, we want the initial value to be undefined so that the required validator will work correctly.
    firstName: new FormControl<string>(undefined, { validators: Validators.required, nonNullable: true } ),

    middleName: new FormControl<string | null | undefined>(undefined),
    // @ts-expect-error this is intentional, we want the initial value to be undefined so that the required validator will work correctly.
    lastName: new FormControl<string>(undefined, { validators: Validators.required, nonNullable: true } ),

    cellPhone1: new FormControl<string | null | undefined>(undefined),

    homePhone1: new FormControl<string | null | undefined>(undefined),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: recipient.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable-next-line @typescript-eslint/no-empty-interface */
export interface IRecipient {
  id?: string | null;
  ultiId?: string;
  firstName?: string;
  middleName?: string | null;
  lastName?: string;
  cellPhone1?: string | null;
  homePhone1?: string | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: recipient.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum RecipientProperties {
  ID = 'id',
  ULTI_ID = 'ultiId',
  FIRST_NAME = 'firstName',
  MIDDLE_NAME = 'middleName',
  LAST_NAME = 'lastName',
  CELL_PHONE_1 = 'cellPhone1',
  HOME_PHONE_1 = 'homePhone1',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: recipient.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { RecipientProperties } from './recipient.properties';

export function createTestRecipient() {
    return { 
      [RecipientProperties.ID]: 'ID',
      [RecipientProperties.ULTI_ID]: 'ULTI_ID',
      [RecipientProperties.FIRST_NAME]: 'FIRST_NAME',
      [RecipientProperties.MIDDLE_NAME]: 'MIDDLE_NAME',
      [RecipientProperties.LAST_NAME]: 'LAST_NAME',
      [RecipientProperties.CELL_PHONE_1]: 'CELL_PHONE_1',
      [RecipientProperties.HOME_PHONE_1]: 'HOME_PHONE_1',
    };
}
"
`;
